--- a/frontend/templates/admin/house/index.html
+++ b/frontend/templates/admin/house/index.html
@@ -23,36 +23,40 @@
 <div class="row">
     <div class="col-md-12">
         <h3 class="page-title col-md-10">	Casas </h3>
-        <div class="form-group col-md-offset-7 col-md-3 col-sm-offset-7 col-sm-3 col-xs-6">
-            <div class="input-icon">
-                <i class="fa fa-search"></i>
-                <input type="text" class="form-control" placeholder="Buscar casa" ng-model="search">
-            </div>
+        <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+            <h1 class="text-center">  <img src="../../assets/global/img/loader4.gif" alt="" />    </h1>
         </div>
-        <button type="submit" class="btn green col-md-2 col-sm-2 col-xs-6 small-margin-bottom" ui-sref="newHouse()">Registrar casa</button>
-        <div class="portlet-body ">
-            <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
-                <h1 class="text-center">  <img src="../../assets/global/img/loader4.gif" alt="" />  <h6 class="text-center">Cargando...</h6>  </h1>
+        <div class="display-none" id="tableData">
+
+            <div class="form-group col-md-offset-7 col-md-3 col-sm-offset-7 col-sm-3 col-xs-6">
+                <div class="input-icon">
+                    <i class="fa fa-search"></i>
+                    <input type="text" class="form-control" placeholder="Buscar casa" ng-model="search">
+                </div>
             </div>
-            <div class="table-scrollable loading" id="tableData">
-                <table class="table table-striped table-hover font-12">
-                    <thead>
-                        <tr>
-                            <th>Número</th>
-                            <th>Extención</th>
-                            <th>Editar</th>
-                            <th>Eliminar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="house in houses | filter:search | orderBy:'name'">
-                            <td>{{house.house_number}}</td>
-                            <td>{{house.extension}}</td>
-                            <td> <a ui-sref="editHouse({id:house.id})">Editar</a></td>
-                            <td> <a ng-click="deleteHouse(house.id,house.house_number)">Eliminar</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <button type="submit" class="btn green col-md-2 col-sm-2 col-xs-6 small-margin-bottom" ui-sref="newHouse()">Registrar casa</button>
+            <div class="portlet-body ">
+
+                <div class="table-scrollable">
+                    <table class="table table-striped table-hover font-12">
+                        <thead>
+                            <tr>
+                                <th>Número</th>
+                                <th>Extención</th>
+                                <th>Editar</th>
+                                <th>Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="house in houses | filter:search">
+                                <td>{{house.house_number}}</td>
+                                <td>{{house.extension}}</td>
+                                <td> <a ui-sref="editHouse({id:house.id})">Editar</a></td>
+                                <td> <a ng-click="deleteHouse(house.id,house.house_number)">Eliminar</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
