--- a/frontend/templates/Residents/formResident.html
+++ b/frontend/templates/Residents/formResident.html
@@ -30,7 +30,7 @@
                         <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
                     </div>
                 </div>
-                <div class="portlet-body form">
+                <div class="portlet-body form display-none" id="register_edit_form">
 
                     <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
                     <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new gray-font">Subir imagen</label></h3>
@@ -83,7 +83,11 @@
     </div>
 
 </div>
-
+<script>
+    jQuery(document).ready(function() {
+        $("#register_edit_form").fadeIn("slow");
+    });
+</script>
 <script type="text/javascript ">
     $('.date-picker').datepicker({
         format: 'dd-mm-yyyy',
