--- a/frontend/templates/admin/header.html
+++ b/frontend/templates/admin/header.html
@@ -20,7 +20,7 @@
 			<ul class="nav navbar-nav pull-right">
 				<!-- BEGIN NOTIFICATION DROPDOWN -->
 				<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-				<li class="dropdown dropdown-extended dropdown-notification" id="header_notification_bar">
+				<!-- <li class="dropdown dropdown-extended dropdown-notification" id="header_notification_bar">
 					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 						<i class="icon-bell"></i>
 						<span class="badge badge-default">
@@ -55,11 +55,11 @@
 							</ul>
 						</li>
 					</ul>
-				</li>
+				</li> -->
 				<!-- END NOTIFICATION DROPDOWN -->
 				<!-- BEGIN INBOX DROPDOWN -->
 				<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-				<li class="dropdown dropdown-extended dropdown-inbox" id="header_inbox_bar">
+				<!-- <li class="dropdown dropdown-extended dropdown-inbox" id="header_inbox_bar">
 					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 						<i class="icon-envelope-open"></i>
 						<span class="badge badge-default">
@@ -104,11 +104,11 @@
 							</ul>
 						</li>
 					</ul>
-				</li>
+				</li> -->
 				<!-- END INBOX DROPDOWN -->
 				<!-- BEGIN TODO DROPDOWN -->
 				<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-				<li class="dropdown dropdown-extended dropdown-tasks" id="header_task_bar">
+				<!-- <li class="dropdown dropdown-extended dropdown-tasks" id="header_task_bar">
 					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 						<i class="icon-calendar"></i>
 						<span class="badge badge-default">
@@ -158,7 +158,7 @@
 							</ul>
 						</li>
 					</ul>
-				</li>
+				</li> -->
 				<!-- END TODO DROPDOWN -->
 				<!-- BEGIN USER LOGIN DROPDOWN -->
 				<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
@@ -172,16 +172,13 @@
 					<ul class="dropdown-menu dropdown-menu-default">
 						<li>
 							<a href="extra_profile.html">
-								<i class="icon-user"></i> My Profile </a>
+								<i class="icon-user"></i> Mi perfil </a>
 						</li>
 
-						<li>
-							<a href="extra_lock.html">
-								<i class="icon-lock"></i> Lock Screen </a>
-						</li>
+
 						<li>
 							<a href="" ng-click="signOut()">
-								<i class="icon-key"></i> Log Out </a>
+								<i class="icon-key"></i>Cerrar sesión</a>
 						</li>
 					</ul>
 				</li>
