--- a/frontend/templates/admin/officer/index.html
+++ b/frontend/templates/admin/officer/index.html
@@ -24,45 +24,51 @@
 <div class="row">
     <div class="col-md-12">
         <h3 class="page-title col-md-10">	Oficiales de seguridad </h3>
-        <div class="form-group col-md-offset-7 col-md-3 col-sm-offset-7 col-sm-3 col-xs-6">
-            <div class="input-icon">
-                <i class="fa fa-search"></i>
-                <input type="text" class="form-control" placeholder="Buscar oficial" ng-model="search">
+        <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+            <h1 class="text-center"><img src="../../assets/global/img/loader4.gif" alt="" /></h1>
+        </div>
+        <div class="display-none" id="tableData">
+
+            <div class="form-group col-md-offset-7 col-md-3 col-sm-offset-7 col-sm-3 col-xs-6">
+                <div class="input-icon">
+                    <i class="fa fa-search"></i>
+                    <input type="text" class="form-control" placeholder="Buscar oficial" ng-model="search">
+                </div>
+            </div>
+            <button type="submit" class="btn green col-md-2 col-sm-2 col-xs-6 small-margin-bottom" ui-sref="newOfficer()">Registrar oficial</button>
+
+            <div class="portlet-body ">
+
+                <div class="table-scrollable">
+                    <table class="table table-striped table-hover font-12">
+                        <thead>
+                            <tr>
+                                <th>Nombre completo</th>
+                                <th>Cédula</th>
+                                <th>Editar</th>
+                                <th>Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="officer in officers | filter:search | orderBy:'name'">
+                                <td>{{officer.name}} {{officer.last_name}} {{officer.second_last_name}}</td>
+                                <td>{{officer.identification_number}}</td>
+                                <td> <a ui-sref="editOfficer({id:officer.id})">Editar</a></td>
+                                <td> <a ng-click="deleteOfficer(officer.id,officer.name,officer.last_name)">Eliminar</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-        <button type="submit" class="btn green col-md-2 col-sm-2 col-xs-6 small-margin-bottom" ui-sref="newOfficer()">Registrar oficial</button>
-
-        <div class="portlet-body ">
-            <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
-                <h1 class="text-center">
-          <img src="../../assets/global/img/loader4.gif" alt="" />
-          <h6 class="text-center">Cargando...</h6>
-        </h1>
-            </div>
-            <div class="table-scrollable loading" id="tableData">
-                <table class="table table-striped table-hover font-12">
-                    <thead>
-                        <tr>
-                            <th>Nombre completo</th>
-                            <th>Cédula</th>
-                            <th>Editar</th>
-                            <th>Eliminar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="officer in officers | filter:search | orderBy:'name'">
-                            <td>{{officer.name}} {{officer.last_name}} {{officer.second_last_name}}</td>
-                            <td>{{officer.identification_number}}</td>
-                            <td> <a ui-sref="editOfficer({id:officer.id})">Editar</a></td>
-                            <td> <a ng-click="deleteOfficer(officer.id,officer.name,officer.last_name)">Eliminar</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
     </div>
 </div>
+
+<script>
+    jQuery(document).ready(function() {
+        $("#loadingIcon").fadeIn("slow");
+    });
+</script>
 
 <script>
     jQuery(document).ready(function() {
