--- a/frontend/templates/admin/vehicule/index.html
+++ b/frontend/templates/admin/vehicule/index.html
@@ -24,54 +24,52 @@
 <div class="row">
     <div class="col-md-12">
         <h3 class="page-title col-md-10">	Vehículos </h3>
-        <div class="form-group col-md-offset-4 col-md-3 col-sm-offset-2  col-sm-4 col-xs-7 no-padding">
-            <label class="col-md-5 col-sm-5  col-xs-4 control-label no-padding gray-font">Filtrar por casa</label>
-            <div class="col-md-7 col-sm-7 col-xs-8 ">
-                <select name="repeatSelect" class="form-control  gray-font" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+        <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+            <h1 class="text-center"><img src="../../assets/global/img/loader4.gif" alt="" /></h1>
+        </div>
+        <div class="display-none" id="tableData">
+            <div class="form-group col-md-offset-4 col-md-3 col-sm-offset-2  col-sm-4 col-xs-7 no-padding">
+                <label class="col-md-5 col-sm-5  col-xs-4 control-label no-padding gray-font">Filtrar por casa</label>
+                <div class="col-md-7 col-sm-7 col-xs-8 ">
+                    <select name="repeatSelect" class="form-control  gray-font" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
 
             </select>
 
+                </div>
             </div>
-        </div>
-        <div class="form-group col-md-3 col-sm-3 col-xs-5" id="index-search-bar">
-            <div class="input-icon">
-                <i class="fa fa-search"></i>
-                <input type="text" class="form-control" placeholder="Buscar vehículo" ng-model="search">
+            <div class="form-group col-md-3 col-sm-3 col-xs-5" id="index-search-bar">
+                <div class="input-icon">
+                    <i class="fa fa-search"></i>
+                    <input type="text" class="form-control" placeholder="Buscar vehículo" ng-model="search">
+                </div>
             </div>
-        </div>
-        <button type="submit" class="btn green col-md-2 col-sm-3 col-xs-12  small-margin-bottom" ui-sref="newVehicule()">Registrar vehículo</button>
+            <button type="submit" class="btn green col-md-2 col-sm-3 col-xs-12  small-margin-bottom" ui-sref="newVehicule()">Registrar vehículo</button>
 
-        <div class="portlet-body ">
-            <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
-                <h1 class="text-center">
-          <img src="../../assets/global/img/loader4.gif" alt="" />
-          <h6 class="text-center">Cargando...</h6>
-        </h1>
-            </div>
-            <div class="table-scrollable loading" id="tableData">
-                <table class="table table-striped table-hover font-12">
-                    <thead>
-                        <tr>
-                            <th>Placa</th>
-                            <th>Marca</th>
-                            <th>Número de casa</th>
-                            <th>Editar</th>
-                            <th>Eliminar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="vehicule in vehicules | filter:search | orderBy:'name'">
-                            <td>{{vehicule.license_plate}}</td>
-                            <td>{{vehicule.brand}}</td>
-                            <td>{{vehicule.house_id}}</td>
-                            <td> <a ui-sref="editVehicule({id:vehicule.id})">Editar</a></td>
-                            <td> <a ng-click="deleteVehicule(vehicule.id,vehicule.license_plate)">Eliminar</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="portlet-body ">
+                <div class="table-scrollable">
+                    <table class="table table-striped table-hover font-12">
+                        <thead>
+                            <tr>
+                                <th>Placa</th>
+                                <th>Marca</th>
+                                <th>Número de casa</th>
+                                <th>Editar</th>
+                                <th>Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="vehicule in vehicules | filter:search | orderBy:'name'">
+                                <td>{{vehicule.license_plate}}</td>
+                                <td>{{vehicule.brand}}</td>
+                                <td>{{vehicule.house_id}}</td>
+                                <td> <a ui-sref="editVehicule({id:vehicule.id})">Editar</a></td>
+                                <td> <a ng-click="deleteVehicule(vehicule.id,vehicule.license_plate)">Eliminar</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-
     </div>
 </div>
 
