--- a/frontend/templates/admin/resident/form.html
+++ b/frontend/templates/admin/resident/form.html
@@ -106,7 +106,7 @@
 <script type="text/javascript ">
     $('.date-picker').datepicker({
         format: 'dd-mm-yyyy',
-        language: "es ",
+        locale: 'es',
         autoclose: true
     });
 
