--- a/frontend/assets/global/css/main.css
+++ b/frontend/assets/global/css/main.css
@@ -10,6 +10,11 @@
 	background: url(http://smallenvelop.com/wp-content/uploads/2014/08/Preloader_11.gif) center no-repeat #fff;
 }
 
+.nothing{
+	border: none;
+	background-color: transparent;
+	color: red;
+}
 #login {
     background-color: white !important;
 
