--- a/frontend/templates/Residents/formVisitor.html
+++ b/frontend/templates/Residents/formVisitor.html
@@ -30,17 +30,17 @@
                 </div>
                 <div class="portlet-body form">
                     <div class="col-md-6 col-sm-6 marging-top-20">
+                      <div class="form-group form-md-line-input">
+                          <input ng-model="identification_number" ng-change="findVisitor()" type="text" class="form-control numbers gray-font" id="form_control_1" required>
+                          <label for="form_control_1"  class="font-15">Número de cédula</label>
+                      </div>
                         <div class="form-group form-md-line-input">
                             <input ng-model="name" type="text" class="form-control letters gray-font" id="form_control_1" required>
                             <label for="form_control_1" class="font-15">Nombre</label>
                         </div>
                         <div class="form-group form-md-line-input">
-                            <input ng-model="last_name" type="text" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="last_name" type="text" class="form-control letters gray-font" id="form_control_1">
                             <label for="form_control_1" class="font-15">Primer Apellido</label>
-                        </div>
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="last_name" type="text" class="form-control letters gray-font" id="form_control_1" required>
-                            <label for="form_control_1" class="font-15">Número de placa (opcional)</label>
                         </div>
 
                     </div>
@@ -50,17 +50,44 @@
                             <input ng-model="second_last_name" type="text" class="form-control letters gray-font" id="form_control_1" required>
                             <label for="form_control_1" class="font-15">Segundo Apellido</label>
                         </div>
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="identification_number" type="text" class="form-control numbers gray-font" id="form_control_1" required>
-                            <label for="form_control_1" class="font-15">Número de cédula</label>
-                        </div>
-                        <p id="datepairExample">
-                            <input type="text" class="date start" />
-                            <input type="text" class="time start" /> to
-                            <input type="text" class="time end" />
-                            <input type="text" class="date end" />
-                        </p>
 
+                        <div class="form-group form-md-line-input">
+                            <input ng-model="license_plate" type="text" style="text-transform:uppercase" class="form-control letters gray-font" id="form_control_1" required>
+                            <label for="form_control_1" class="font-15">Número de placa (opcional)</label>
+                        </div>
+
+                        <div class="date-picker input-daterange" data-date="10/11/2012" data-date-format="dd-mm-yyyy" data-date-language="es">
+
+                            <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6  no-padding">
+                                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12  no-padding">
+                                    <div class="form-group form-md-line-input">
+                                        <input ng-model="initial_date" type="text" class="form-control text-center numbers gray-font dating" name="from" required>
+                                        <label for="form_control_1" class="font-15">Fecha incial:</label>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-padding">
+                                    <div class="form-group form-md-line-input">
+                                        <input ng-model="final_date" type="text" class="form-control text-center numbers gray-font dating" name="to" required>
+                                        <label for="form_control_1" class="font-15">Fecha final:</label>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 no-padding">
+                            <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12  no-padding">
+                                <div class="form-group form-md-line-input">
+                                    <input type="text" ng-model="initial_hour" class="form-control text-center timepicker timepicker-no-seconds" required>
+                                    <label for="form_control_1" class="font-15">Hora incial:</label>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-padding">
+                                <div class="form-group form-md-line-input">
+                                    <input type="text" ng-model="final_hour" class="form-control text-center timepicker timepicker-no-seconds" required>
+                                    <label for="form_control_1" class="font-15">Hora final:</label>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                     <div class="form-actions noborder">
@@ -69,48 +96,21 @@
                         <button type="button" class="btn default gray-font">Cancelar</button>
                       </h3>
                     </div>
-
                 </div>
             </div>
         </form>
     </div>
-
 </div>
-<script type="text/javascript" src="datepair.js"></script>
-<script type="text/javascript" src="jquery.datepair.js"></script>
 <script>
-    // initialize input widgets first
-    $('#datepairExample .time').timepicker({
-        'showDuration': true,
-        'timeFormat': 'g:ia'
-    });
-
-    $('#datepairExample .date').datepicker({
-        'format': 'yyyy-m-d',
-        'autoclose': true
-    });
-
-    // initialize datepair
-    $('#datepairExample').datepair();
-</script>
-<script type="text/javascript ">
-    $('.date-picker').datepicker({
-        format: 'dd-mm-yyyy',
-        language: "es ",
-        autoclose: true
-    });
-
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function(e) {
-                $('#blah').attr('src', e.target.result);
-            }
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
-    $("#imgInp ").change(function() {
-        readURL(this);
+    $(function() {
+        $('.timepicker').keydown(function() {
+            return false;
+        });
+        $('.dating').keydown(function() {
+            return false;
+        });
+        setTimeout(function() {
+            ComponentsPickers.init();
+        }, 100);
     });
 </script>
