--- a/frontend/templates/Residents/index_visitors.html
+++ b/frontend/templates/Residents/index_visitors.html
@@ -7,7 +7,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Vehículos</a>
+            <a href="#">Visitantes</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
@@ -22,9 +22,26 @@
 </div>
 
 <div class="row">
-
-    <div class="col-md-12">
-        <h3 class="page-title col-md-10">	Visitantes recibidos en el ultimo mes </h3>
+    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+        <h3 class="page-title col-md-6 col-lg-6 col-xs-12 col-sm-12 no-list">{{title}}
+          <div ng-show="isConsulting==true">
+            <h4>{{titleConsult}}</h4>
+          </div>
+        </h3>
+        <div class=" col-md-6 col-lg-6 col-sm-12 col-xs-12 no-padding">
+            <div class="date-picker input-daterange" data-date="10/11/2012" data-date-format="dd-mm-yyyy" data-date-language="es">
+                <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12" ng-show="isConsulting==true">
+                    <button type="button" class="nothing col-xs-12" ng-click="stopConsulting()" name="button"><i class="fa fa-times red-font"></i></button>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 no-padding gray-font">
+                    <input ng-model="consulting_initial_time" type="text" placeholder="Desde la fecha" class="form-control text-center numbers gray-font dating" name="from">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 no-padding">
+                    <input ng-model="consulting_final_time" type="text" placeholder="Hasta la fecha" class="form-control text-center numbers gray-font dating" name="to">
+                </div>
+                <button ng-click="consultVisitors()" class="btn green col-md-3 col-sm-3 col-xs-12  small-margin-bottom">Consultar</button>
+            </div>
+        </div>
         <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
             <h1 class="text-center">
               <img src="../../assets/global/img/loader4.gif" alt="" />
@@ -35,7 +52,7 @@
             <div class="form-group col-md-offset-7 col-md-3 col-sm-3 col-xs-5" id="index-search-bar">
                 <div class="input-icon">
                     <i class="fa fa-search"></i>
-                    <input type="text" class="form-control" placeholder="Buscar vehículo" ng-model="search">
+                    <input type="text" class="form-control" placeholder="Buscar visitante" ng-model="search">
                 </div>
             </div>
             <button type="submit" class="btn green col-md-2 col-sm-3 col-xs-12  small-margin-bottom" ui-sref="condominoRegisterVisitor()">Reportar visitante</button>
@@ -49,7 +66,7 @@
                                 <th>Nombre completo</th>
                                 <th>Cédula</th>
                                 <th>Número de placa</th>
-                                <th>Fecha</th>
+                                <th>Fecha y Hora</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -71,5 +88,13 @@
 <script>
     jQuery(document).ready(function() {
         $("#loadingIcon").fadeIn("slow");
+        $(function() {
+            $('.dating').keydown(function() {
+                return false;
+            });
+            setTimeout(function() {
+                ComponentsPickers.init();
+            }, 100);
+        });
     });
 </script>
